cmake_minimum_required(VERSION 3.10)
project(util)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

if (UNIX)
    add_definitions(-DUNIX)
    add_definitions(-DLITTLE_ENDIAN_SYSTEM)
    if("${CMAKE_SYSTEM}" MATCHES "Linux")
        add_definitions(-DLINUX)
    endif()
else()
    add_definitions(-DWIN32)
endif (UNIX)

include_directories(.)
include_directories(comm)
include_directories(graph)
include_directories(net)
include_directories(proxy)
include_directories(security)

add_library(util
        comm/Serial.cpp
        comm/Serial.h
        comm/Serial2Net.cpp
        comm/Serial2Net.h
        comm/SerialReader.cpp
        comm/SerialReader.h
        comm/SerialWriter.cpp
        comm/SerialWriter.h
        graph/Graph.cpp
        graph/Graph.h
        graph/HTGraph.h
        graph/MSPAlgorithm.cpp
        graph/MSPAlgorithm.h
        graph/StringHashgraph.cpp
        graph/StringHashgraph.h
        graph/StringHashthing.cpp
        graph/StringHashthing.h
        graph/Thing.cpp
        graph/Thing.h
        net/NetUtils.cpp
        net/NetUtils.h
        net/NetworkHeaders.cpp
        net/NetworkHeaders.h
        net/NICInfo.h
        net/WakeOnLAN.cpp
        net/WakeOnLAN.h
        proxy/Callback.h
        proxy/ConnHandler.h
        proxy/Protocol.cpp
        proxy/Protocol.h
        proxy/Registry.h
        proxy/RegistryInterface.h
        proxy/Skeleton.h
        proxy/Stub.cpp
        proxy/Stub.h
        proxy/StubCallbackHandler.cpp
        proxy/StubCallbackHandler.h
        proxy/Unmarshaller.h
        security/CryptoUtils.cpp
        security/CryptoUtils.h
        security/SecureReader.cpp
        security/SecureReader.h
        security/SecureWriter.cpp
        security/SecureWriter.h
        AtomicVar.h
        AVList.cpp
        AVList.h
        Base64.cpp
        Base64.h
        Base64Transcoders.cpp
        Base64Transcoders.h
        BitArray.cpp
        BitArray.h
        BloomFilter.cpp
        BloomFilter.h
        BoyerMooreHorspool.cpp
        BoyerMooreHorspool.h
        BufferedReader.cpp
        BufferedReader.h
        BufferedWriter.cpp
        BufferedWriter.h
        BufferReader.cpp
        BufferReader.h
        BufferWriter.cpp
        BufferWriter.h
        CircularBuffer.h
        CircularPtrLList.h
        CircularQueue.h
        cJSON.c
        cJSON.h
        CommandProcessor.cpp
        CommandProcessor.h
        CommHelper.cpp
        CommHelper.h
        CommHelper2.cpp
        CommHelper2.h
        CompressedReader.cpp
        CompressedReader.h
        CompressedWriter.cpp
        CompressedWriter.h
        ConcurrentQueue.h
        ConditionVariable.cpp
        ConditionVariable.h
        ConfigManager.cpp
        ConfigManager.h
        CRC.cpp
        CRC.h
        Cron.cpp
        Cron.h
        DArray.h
        DArray2.h
        DArray3.h
        DatagramSocket.cpp
        DatagramSocket.h
        DataRelayer.cpp
        DataRelayer.h
        Dime.cpp
        Dime.h
        EndianHelper.cpp
        EndianHelper.h
        EventMonitor.cpp
        EventMonitor.h
        EventNotifier.cpp
        EventNotifier.h
        Exceptions.h
        ExponentialAverage.h
        FastMutex.cpp
        FastMutex.h
        FIFOBuffer.h
        FIFOQueue.cpp
        FIFOQueue.h
        File.cpp
        File.h
        FileReader.cpp
        FileReader.h
        FileUtils.cpp
        FileUtils.h
        FileWriter.cpp
        FileWriter.h
        FourStringHashtable.h
        FTypes.h
        GeoUtils.cpp
        GeoUtils.h
        HTTPClient.cpp
        HTTPClient.h
        HTTPHelper.cpp
        HTTPHelper.h
        InetAddr.cpp
        InetAddr.h
        InstrumentedReader.h
        InstrumentedWriter.h
        IntervalTree.h
        ISAACRand.cpp
        ISAACRand.h
        Json.cpp
        Json.h
        LineOrientedReader.cpp
        LineOrientedReader.h
        LList.h
        Logger.cpp
        Logger.h
        LoggingConditionVariable.cpp
        LoggingConditionVariable.h
        LoggingMutex.cpp
        LoggingMutex.h
        ManageableDatagramSocket.cpp
        ManageableDatagramSocket.h
        ManageableThread.cpp
        ManageableThread.h
        MD5.cpp
        MD5.h
        MovingAverage.h
        MulticastUDPDatagramSocket.cpp
        MulticastUDPDatagramSocket.h
        Mutex.cpp
        Mutex.h
        NLFLib.cpp
        NLFLib.h
        NullWriter.cpp
        NullWriter.h
        ObjectDefroster.cpp
        ObjectDefroster.h
        ObjectFreezer.cpp
        ObjectFreezer.h
        OSThread.cpp
        OSThread.h
        Pipe.cpp
        Pipe.h
        ProcessExecutor.cpp
        ProcessExecutor.h
        ProxyDatagramSocket.cpp
        ProxyDatagramSocket.h
        PtrLList.h
        PtrQueue.h
        PtrStack.h
        PushbackLineOrientedReader.cpp
        PushbackLineOrientedReader.h
        Queue.h
        RangeDLList.cpp
        RangeDLList.h
        Reader.cpp
        Reader.h
        RollingBoundedBitmap.cpp
        RollingBoundedBitmap.h
        Runnable.h
        SCTPSocket.cpp
        SCTPSocket.h
        SemClass.cpp
        SemClass.h
        SequentialArithmetic.h
        SettingsFileManager.cpp
        SettingsFileManager.h
        SetUniquePtrLList.h
        SigFaultHandler.cpp
        SigFaultHandler.h
        SimpleCommHelper2.cpp
        SimpleCommHelper2.h
        SoapMessage.cpp
        SoapMessage.h
        Socket.cpp
        Socket.h
        SocketHelper.cpp
        SocketHelper.h
        SocketReader.cpp
        SocketReader.h
        SocketWriter.cpp
        SocketWriter.h
        SortedLList.h
        StackAllocator.cpp
        StackAllocator.h
        Statistics.cpp
        Statistics.h
        StrClass.cpp
        StrClass.h
        StringFloatHashtable.h
        StringHashset.cpp
        StringHashset.h
        StringHashtable.h
        StringStringHashtable.cpp
        StringStringHashtable.h
        StringStringMap.h
        StringStringMultiMap.h
        StringStringWildMultimap.cpp
        StringStringWildMultimap.h
        StringTokenizer.cpp
        StringTokenizer.h
        StringVoidPtrMap.h
        TClass.cpp
        TClass.h
        TCPSocket.cpp
        TCPSocket.h
        Thread.cpp
        Thread.h
        ThreadPool.cpp
        ThreadPool.h
        ThreeStringHashtable.h
        TimeBoundedStringHashset.cpp
        TimeBoundedStringHashset.h
        TimeIntervalAverage.h
        Timestamp.cpp
        Timestamp.h
        TreeUtils.cpp
        TreeUtils.h
        Trie.h
        UDPDatagramSocket.cpp
        UDPDatagramSocket.h
        UDPRawDatagramSocket.cpp
        UDPRawDatagramSocket.h
        uint128.cpp
        uint128.h
        UInt32Hashset.h
        UInt32Hashtable.h
        UInt64Hashtable.h
        URLParser.cpp
        URLParser.h
        UUID.cpp
        UUID.h
        UUIDGenerator.cpp
        UUIDGenerator.h
        Writer.cpp
        Writer.h
        ZipFileReader.cpp
        ZipFileReader.h
        ZipFileUtils.cpp
        ZipFileUtils.h
        ZlibBufferCompressionInterface.cpp
        ZlibBufferCompressionInterface.h)
